--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://anshul123:anshul123@cluster0.rk2ohyd.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=Anshul-Bansal
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=Anshul_backend
+REFRESH_TOKEN_EXPIRY=10d
