--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,6 @@ ACCESS_TOKEN_SECRET=Anshul-Bansal
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=Anshul_backend
 REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_CLOUD_NAME=dsqfiqwmq
+CLOUDINARY_API_KEY=611276937778283
+CLOUDINARY_API_SECRET=abc12345
